--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: rgb(2,0,36);
+    background: rgb(177, 49, 134);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
 }
 
@@ -12,7 +12,7 @@ header {
     display: flex;
     list-style: none;
     font-size: 40px;
-    color: rgb(167, 58, 139);
+    color: rgb(84, 170, 144);
     gap: 20px;
     text-transform: uppercase;
 }
