--- a/style.css
+++ b/style.css
@@ -21,4 +21,38 @@ header {
  cursor: pointer;
  background-color: white;
  color: black;
+
+
+ section {
+    width: 100%;
+    padding-left: 8%;
+}
+
+ .secao {
+    padding-right: 8%;
+    padding-top: 2%;
+ }
+
+ .moldura_videos {
+display: flex;
+flex-wrap: wrap;
+justify-content: space-around;
+list-style: none;
+ }
+
+ .video {
+flex: 1 1 30%;
+margin: 10px;
+ }
+
+ .video iframe {
+    width: 100%;
+    height: auto;
+    border-radius: 15px;
+ }
+
+ * {
+    margin: 0%;
+    padding: 0%;
+ }
 }
